# wittgenstein

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md  dune-project  esy.json  mix.exs  rebar.config  shell.nix
admin/: .gitignore  README.md  mix.exs
admin/assets/: package-lock.json
admin/config/: config.exs  dev.exs  prod.exs  prod.secret.exs  test.exs
admin/lib/: wittgenstein_admin.ex  wittgenstein_admin_web.ex
admin/test/: test_helper.exs
cli/: Cargo.toml  build.rs  protos
cli/codegen/: .merlin  dune
cli/codegen/erlang/: .merlin  dune
cli/codegen/graphql/: .merlin  dune
cli/model/: .merlin  dune
cli/parser/: .merlin  dune
cli/src/: main.rs
config/: local.config.src  sys.config  vm.args
core/: .credo.exs  mix.exs
core/lib/: uri.ex
docs/: IDEAS.md  SPEC.md
engine/: .gitignore  Makefile  mix.exs
engine/docker/: release.dockerfile
engine/priv/: protos
engine/src/: factdb.erl  fdb_entity.erl  fdb_fact.erl  fdb_kafka.erl  fdb_kafka_subscriber.erl  (+1 more)
esy.lock/: index.json
factdb/: Makefile  mix.exs
grpc/: Makefile  README.md  mix.exs
lib/: wittgenstein.ex
nlp/: Makefile  entity_relation_extractor.py  entity_relation_extractor_2.py  flair_ner.py  requirements.txt
saga/: package.json
spec/: WittgensteinCore.tla
test/: wittgenstein_test.exs
tools/: Cargo.toml  Dockerfile  Makefile  build.rs  protos
tools/codegen/: dune-project
tools/schemata/protobuf/wittgenstein/: factdb.proto
tools/src/: elasticsearch_projection.rs  fact.rs  fact_importer.rs  filestore_importer.rs  json_projection.rs
(+136 files in other folders)
