[package]
name = "wittgenstein"
version = "0.1.0"
authors = ["Leandro Ostera <leandro@ostera.io>"]
edition = "2018"

[[bin]]
name = "wittgenstein"
path = "src/main.rs"

[dependencies]
tonic = "0.2"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"]}

[build-dependencies]
tonic-build = "0.2"
